<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/recycler_for_food_items"
        android:layout_width="0dp"
        android:layout_weight="0.40"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    this is comment-->

    <EditText
        android:id="@+id/insert_quantity_food_item"
        android:layout_width="0dp"
        android:layout_weight="0.1"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_for_food_items"
        app:layout_constraintStart_toEndOf="@+id/recycler_for_food_items"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/quantity_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Quantity:"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/insert_quantity_food_item"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_quantity_food_item"
        android:id="@+id/select_measurement_unit"/>

</LinearLayout>